apps/seafile/onlyoffice.route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice
  namespace: seafile
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: seafile-onlyoffice-xfp@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: onlyoffice.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlyoffice
                port:
                  number: 80
